<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ic_group_icon"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_marginTop="39dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/group_463"
        />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginHorizontal="22dp"
        android:text="@string/track_title"
        android:gravity="start"
        android:textAppearance="@style/TitleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ic_group_icon"
        />

    <TextView
        android:id="@+id/sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:paddingHorizontal="22dp"
        android:gravity="start"
        android:textAppearance="@style/SubTitleText"
        android:text="@string/track_subtitle"/>

    <LinearLayout
        android:id="@+id/check_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sub_title"
        android:layout_marginStart="22dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/track_do_not_show_again"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>