<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="?attr/toolbarMenuBackground"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacingPreMedium"
        android:layout_marginTop="@dimen/spacingMedium"
        android:fontFamily="sans-serif"
        android:text="@string/pull_request_link"
        android:textAppearance="?attr/textAppearanceHeadline4"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacingPreMedium"
        android:layout_marginStart="@dimen/spacingMedium"
        android:layout_marginTop="@dimen/spacingPreNormal"
        android:layout_marginEnd="@dimen/spacingLarge"
        android:fontFamily="sans-serif"
        android:text="@string/past_pull_request_link"
        android:textAppearance="?attr/textAppearanceSubtitle2"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/prLinkEditText"
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacingPreMedium"
        android:layout_marginTop="@dimen/spacingPreNormal"
        app:boxCornerRadiusBottomEnd="@dimen/spacingTiny"
        app:boxCornerRadiusBottomStart="@dimen/spacingTiny"
        app:boxStrokeWidth="@dimen/spacingZero"
        app:boxStrokeWidthFocused="@dimen/spacingZero"
        app:errorIconDrawable="@null"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/prLinkText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/changesBackground"
            android:hint="@string/link"
            android:inputType="text"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/spacingNormal"
            android:paddingVertical="@dimen/spacingSmall"
            android:scrollHorizontally="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacingTiny"
        android:textColor="@color/red"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/prLinkEditText"
        app:layout_constraintTop_toBottomOf="@id/prLinkEditText" />

    <TextView
        android:id="@+id/tv_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacingMedium"
        android:layout_marginEnd="@dimen/spacingMedium"
        android:layout_marginBottom="@dimen/spacingNormal"
        android:text="@string/submit_pr_navigation"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="?attr/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prLinkEditText" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacingMedium"
        android:layout_marginEnd="@dimen/spacingMedium"
        android:layout_marginBottom="@dimen/spacingNormal"
        android:text="@string/cancel_pr_navigation"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="?attr/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_submit"
        app:layout_constraintTop_toBottomOf="@id/prLinkEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>
