<?xml version="1.0" encoding="utf-8"?><!--
 ~ All rights reserved by Akvelon Inc.
 ~
 ~ Created by Ignat Krasnov (ignat.krasnov@akvelon.com)
 ~ on 19 February 2021
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bgr_builds_status">

    <TextView
        android:id="@+id/buildsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacingSmall"
        android:text="@string/builds"
        android:textAppearance="?attr/textAppearanceBody2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/buildCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacingTiny"
        android:textAppearance="?attr/textAppearanceCaption"
        app:layout_constraintBottom_toBottomOf="@+id/passed"
        app:layout_constraintEnd_toStartOf="@+id/passed"
        app:layout_constraintTop_toTopOf="@+id/passed"
        tools:text="1 of 7" />

    <TextView
        android:id="@+id/passed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passed"
        android:textAppearance="?attr/textAppearanceCaption"
        app:layout_constraintBottom_toBottomOf="@+id/buildsTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buildsTitle" />

    <com.akvelon.bitbuckler.ui.view.BuildsProgressView
        android:id="@+id/buildsProgress"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:layout_marginTop="@dimen/spacingSmall"
        android:layout_marginBottom="@dimen/spacingSmall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buildsTitle"
        tools:failed_count="3"
        tools:in_progress_count="2"
        tools:stopped_count="1"
        tools:successful_count="1" />

    <TextView
        android:id="@+id/emptyBuilds"
        android:text="@string/no_builds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacingSmall"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textStyle="italic"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buildsTitle" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/progressGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="buildCount,passed,buildsProgress" />

</androidx.constraintlayout.widget.ConstraintLayout>
