<?xml version="1.0" encoding="utf-8"?><!--
 ~ All rights reserved by Akvelon Inc.
 ~
 ~ Created by Aleksandra Domashina (aleksandra.domashina@akvelon.com)
 ~ on 02 December 2020
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/startFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface">

    <ImageView
        android:id="@+id/appImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/appMotto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.335"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/ic_bitbuckler"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/app_name"
        android:textAppearance="?attr/textAppearanceHeadline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appImage" />

    <TextView
        android:id="@+id/appMotto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="32dp"
        android:text="@string/motto"
        android:textSize="28sp"
        android:textAppearance="?attr/textAppearanceHeadline4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.721" />

    <Button
        android:id="@+id/toLogin"
        style="@style/LoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacingLarge"
        android:paddingVertical="@dimen/spacingNormal"
        android:paddingHorizontal="@dimen/spacingGiant"
        android:text="@string/button_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="42dp"
        android:indeterminateTint="@color/blue"
        android:indeterminateTintMode="src_atop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>